WindGroup Dev/src/objects/Lease_Plan__c.object
<CustomObject>
    <description>Used to capture Status of a Unit (Vacant, Committed, LOI)
Managed by Unit creation, LOI process, Lease Unit</description>
    <fields>
        <fullName>Base_Rent__c</fullName>
        <label>Base Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Daily_Committed_Rate_10__c</fullName>
        <label>Daily Committed Rate 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Committed_Rate_11__c</fullName>
        <label>Daily Committed Rate 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Committed_Rate_12__c</fullName>
        <label>Daily Committed Rate 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_LOI_Rate_10__c</fullName>
        <label>Daily LOI Rate 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_LOI_Rate_11__c</fullName>
        <label>Daily LOI Rate 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_LOI_Rate_12__c</fullName>
        <label>Daily LOI Rate 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Rate_10__c</fullName>
        <label>Daily Rate 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Rate_11__c</fullName>
        <label>Daily Rate 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Rate_12__c</fullName>
        <label>Daily Rate 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Day_10__c</fullName>
        <label>Day 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_11__c</fullName>
        <label>Day 11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_12__c</fullName>
        <label>Day 12</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Rental__c</fullName>
        <label>Expected Rental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fit_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fit out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Monthly_Budget__c</fullName>
        <label>LOI Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOI_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI Unit</label>
        <referenceTo>LOI_Unit__c</referenceTo>
        <relationshipLabel>Lease Plans</relationshipLabel>
        <relationshipName>Lease_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Unit</label>
        <referenceTo>Lease_Unit__c</referenceTo>
        <relationshipLabel>Lease Plans</relationshipLabel>
        <relationshipName>Lease_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <description>To be loaded via DL</description>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Committed_Budget__c</fullName>
        <label>Monthly Committed Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Unit__r.Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit &gt; Property &gt; Short Code</inlineHelpText>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <formula>Unit__r.Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Hurdle__c</fullName>
        <label>Rent Hurdle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_10__c</fullName>
        <label>Status 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lease_Plan_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_11__c</fullName>
        <label>Status 11</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lease_Plan_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_12__c</fullName>
        <label>Status 12</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lease_Plan_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lease_Plan_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Units__c</referenceTo>
        <relationshipLabel>Lease Plans</relationshipLabel>
        <relationshipName>Lease_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vacant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vacant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_Day_10__c</fullName>
        <formula>CASE( MOD(  Day_10__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Day 10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Day_11__c</fullName>
        <formula>CASE( MOD(  Day_11__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Day 11</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Day_12__c</fullName>
        <formula>CASE( MOD(  Day_12__c  - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Day 12</label>
        <type>Text</type>
    </fields>
    <label>Lease Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Unit__c</columns>
        <columns>Lease_Unit__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-LP-{000000}</displayFormat>
        <label>Lease Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Plans</pluralLabel>
    <recordTypes>
        <fullName>Daily</fullName>
        <active>true</active>
        <label>Daily</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monthly</fullName>
        <active>true</active>
        <label>Monthly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>